// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toast /> matches snapshot for toast with a custom closeButtonLabel 1`] = `
<Toast
  closeButtonLabel="Dismiss"
  forwardedRef={null}
  theme={
    {
      "animationEnterDuration": 300,
      "animationEnterTimingFunction": "easeIn",
      "animationExitDuration": 150,
      "animationExitTimingFunction": "easeOut",
      "animationFlipDuration": 150,
      "backgroundColor": "#5E6D7A",
      "backgroundColorError": "#F1AD33",
      "borderRadius": "3px",
      "boxShadow": "0 1px 5px 0 rgba(28,32,37,0.2)",
      "closeIconColor": undefined,
      "color": "#FFF",
      "colorAction": undefined,
      "colorDescription": undefined,
      "colorError": "#1C2025",
      "colorTitle": undefined,
      "fontFamily": "'Nunito', 'Helvetica Neue', Helvetica, Arial, sans-serif",
      "fontFamilyDescription": undefined,
      "fontFamilyTitle": undefined,
      "fontSize": "15px",
      "fontSizeDescription": undefined,
      "fontSizeTitle": undefined,
      "fontStretch": "normal",
      "fontStyle": "normal",
      "fontWeight": 600,
      "fontWeightDescription": undefined,
      "fontWeightTitle": undefined,
      "iconSize": 20,
      "isClassic": true,
      "letterSpacing": "normal",
      "letterSpacingDescription": undefined,
      "letterSpacingTitle": undefined,
      "lineHeight": "24px",
      "lineHeightDescription": undefined,
      "lineHeightTitle": undefined,
      "marginControl": "12px",
      "markingColorError": undefined,
      "markingColorInfo": undefined,
      "markingColorLoading": undefined,
      "markingColorSuccess": undefined,
      "markingColorWarning": undefined,
      "markingIconColorError": undefined,
      "markingIconColorInfo": undefined,
      "markingIconColorLoading": undefined,
      "markingIconColorSuccess": undefined,
      "markingIconColorWarning": undefined,
      "maxHeight": "120px",
      "maxWidth": "100%",
      "padding": "12px 16px",
      "stackMargin": "16px",
      "structureMargin": "8px",
      "textAlign": "left",
      "textLinkAsAction": {
        "fontFamily": "'Nunito', 'Helvetica Neue', Helvetica, Arial, sans-serif",
        "fontSize": "15px",
        "fontWeight": 400,
        "letterSpacing": undefined,
        "lineHeight": "24px",
        "textLinkBackgroundColorPrimarySelected": "inherit",
        "textLinkBorderRadiusFocus": "2px",
        "textLinkBorderWidthFocus": "2px",
        "textLinkColorPrimary": "#0376DA",
        "textLinkColorPrimaryActive": "#0376DA",
        "textLinkColorPrimaryDisabled": "#6FB1EA",
        "textLinkColorPrimaryHover": "#6FB1EA",
        "textLinkColorPrimarySelected": "inherit",
        "textLinkMargin": "0",
        "textLinkPadding": "0",
        "textLinkShadowColorFocus": "#0376DA",
      },
      "toastLarge": "800px",
      "toastMedium": "480px",
      "toastSmall": "368px",
      "zIndex": 5000,
    }
  }
/>
`;

exports[`<Toast /> matches snapshot for toast with default closeButtonLabel 1`] = `
<Toast
  forwardedRef={null}
  theme={
    {
      "animationEnterDuration": 300,
      "animationEnterTimingFunction": "easeIn",
      "animationExitDuration": 150,
      "animationExitTimingFunction": "easeOut",
      "animationFlipDuration": 150,
      "backgroundColor": "#5E6D7A",
      "backgroundColorError": "#F1AD33",
      "borderRadius": "3px",
      "boxShadow": "0 1px 5px 0 rgba(28,32,37,0.2)",
      "closeIconColor": undefined,
      "color": "#FFF",
      "colorAction": undefined,
      "colorDescription": undefined,
      "colorError": "#1C2025",
      "colorTitle": undefined,
      "fontFamily": "'Nunito', 'Helvetica Neue', Helvetica, Arial, sans-serif",
      "fontFamilyDescription": undefined,
      "fontFamilyTitle": undefined,
      "fontSize": "15px",
      "fontSizeDescription": undefined,
      "fontSizeTitle": undefined,
      "fontStretch": "normal",
      "fontStyle": "normal",
      "fontWeight": 600,
      "fontWeightDescription": undefined,
      "fontWeightTitle": undefined,
      "iconSize": 20,
      "isClassic": true,
      "letterSpacing": "normal",
      "letterSpacingDescription": undefined,
      "letterSpacingTitle": undefined,
      "lineHeight": "24px",
      "lineHeightDescription": undefined,
      "lineHeightTitle": undefined,
      "marginControl": "12px",
      "markingColorError": undefined,
      "markingColorInfo": undefined,
      "markingColorLoading": undefined,
      "markingColorSuccess": undefined,
      "markingColorWarning": undefined,
      "markingIconColorError": undefined,
      "markingIconColorInfo": undefined,
      "markingIconColorLoading": undefined,
      "markingIconColorSuccess": undefined,
      "markingIconColorWarning": undefined,
      "maxHeight": "120px",
      "maxWidth": "100%",
      "padding": "12px 16px",
      "stackMargin": "16px",
      "structureMargin": "8px",
      "textAlign": "left",
      "textLinkAsAction": {
        "fontFamily": "'Nunito', 'Helvetica Neue', Helvetica, Arial, sans-serif",
        "fontSize": "15px",
        "fontWeight": 400,
        "letterSpacing": undefined,
        "lineHeight": "24px",
        "textLinkBackgroundColorPrimarySelected": "inherit",
        "textLinkBorderRadiusFocus": "2px",
        "textLinkBorderWidthFocus": "2px",
        "textLinkColorPrimary": "#0376DA",
        "textLinkColorPrimaryActive": "#0376DA",
        "textLinkColorPrimaryDisabled": "#6FB1EA",
        "textLinkColorPrimaryHover": "#6FB1EA",
        "textLinkColorPrimarySelected": "inherit",
        "textLinkMargin": "0",
        "textLinkPadding": "0",
        "textLinkShadowColorFocus": "#0376DA",
      },
      "toastLarge": "800px",
      "toastMedium": "480px",
      "toastSmall": "368px",
      "zIndex": 5000,
    }
  }
/>
`;

exports[`<Toast /> renders a Classic Toast 1`] = `
<Toast
  forwardedRef={null}
  theme={
    {
      "animationEnterDuration": 300,
      "animationEnterTimingFunction": "easeIn",
      "animationExitDuration": 150,
      "animationExitTimingFunction": "easeOut",
      "animationFlipDuration": 150,
      "backgroundColor": "#5E6D7A",
      "backgroundColorError": "#F1AD33",
      "borderRadius": "3px",
      "boxShadow": "0 1px 5px 0 rgba(28,32,37,0.2)",
      "closeIconColor": undefined,
      "color": "#FFF",
      "colorAction": undefined,
      "colorDescription": undefined,
      "colorError": "#1C2025",
      "colorTitle": undefined,
      "fontFamily": "'Nunito', 'Helvetica Neue', Helvetica, Arial, sans-serif",
      "fontFamilyDescription": undefined,
      "fontFamilyTitle": undefined,
      "fontSize": "15px",
      "fontSizeDescription": undefined,
      "fontSizeTitle": undefined,
      "fontStretch": "normal",
      "fontStyle": "normal",
      "fontWeight": 600,
      "fontWeightDescription": undefined,
      "fontWeightTitle": undefined,
      "iconSize": 20,
      "isClassic": true,
      "letterSpacing": "normal",
      "letterSpacingDescription": undefined,
      "letterSpacingTitle": undefined,
      "lineHeight": "24px",
      "lineHeightDescription": undefined,
      "lineHeightTitle": undefined,
      "marginControl": "12px",
      "markingColorError": undefined,
      "markingColorInfo": undefined,
      "markingColorLoading": undefined,
      "markingColorSuccess": undefined,
      "markingColorWarning": undefined,
      "markingIconColorError": undefined,
      "markingIconColorInfo": undefined,
      "markingIconColorLoading": undefined,
      "markingIconColorSuccess": undefined,
      "markingIconColorWarning": undefined,
      "maxHeight": "120px",
      "maxWidth": "100%",
      "padding": "12px 16px",
      "stackMargin": "16px",
      "structureMargin": "8px",
      "textAlign": "left",
      "textLinkAsAction": {
        "fontFamily": "'Nunito', 'Helvetica Neue', Helvetica, Arial, sans-serif",
        "fontSize": "15px",
        "fontWeight": 400,
        "letterSpacing": undefined,
        "lineHeight": "24px",
        "textLinkBackgroundColorPrimarySelected": "inherit",
        "textLinkBorderRadiusFocus": "2px",
        "textLinkBorderWidthFocus": "2px",
        "textLinkColorPrimary": "#0376DA",
        "textLinkColorPrimaryActive": "#0376DA",
        "textLinkColorPrimaryDisabled": "#6FB1EA",
        "textLinkColorPrimaryHover": "#6FB1EA",
        "textLinkColorPrimarySelected": "inherit",
        "textLinkMargin": "0",
        "textLinkPadding": "0",
        "textLinkShadowColorFocus": "#0376DA",
      },
      "toastLarge": "800px",
      "toastMedium": "480px",
      "toastSmall": "368px",
      "zIndex": 5000,
    }
  }
/>
`;

exports[`<Toast /> renders a Novo Toast 1`] = `
<Toast
  forwardedRef={null}
  theme={
    {
      "animationEnterDuration": 300,
      "animationEnterTimingFunction": "easeIn",
      "animationExitDuration": 150,
      "animationExitTimingFunction": "easeOut",
      "animationFlipDuration": 150,
      "backgroundColor": "#5E6D7A",
      "backgroundColorError": "#F1AD33",
      "borderRadius": "3px",
      "boxShadow": "0 1px 5px 0 rgba(28,32,37,0.2)",
      "closeIconColor": undefined,
      "color": "#FFF",
      "colorAction": undefined,
      "colorDescription": undefined,
      "colorError": "#1C2025",
      "colorTitle": undefined,
      "fontFamily": "'Nunito', 'Helvetica Neue', Helvetica, Arial, sans-serif",
      "fontFamilyDescription": undefined,
      "fontFamilyTitle": undefined,
      "fontSize": "15px",
      "fontSizeDescription": undefined,
      "fontSizeTitle": undefined,
      "fontStretch": "normal",
      "fontStyle": "normal",
      "fontWeight": 600,
      "fontWeightDescription": undefined,
      "fontWeightTitle": undefined,
      "iconSize": 20,
      "isClassic": true,
      "letterSpacing": "normal",
      "letterSpacingDescription": undefined,
      "letterSpacingTitle": undefined,
      "lineHeight": "24px",
      "lineHeightDescription": undefined,
      "lineHeightTitle": undefined,
      "marginControl": "12px",
      "markingColorError": undefined,
      "markingColorInfo": undefined,
      "markingColorLoading": undefined,
      "markingColorSuccess": undefined,
      "markingColorWarning": undefined,
      "markingIconColorError": undefined,
      "markingIconColorInfo": undefined,
      "markingIconColorLoading": undefined,
      "markingIconColorSuccess": undefined,
      "markingIconColorWarning": undefined,
      "maxHeight": "120px",
      "maxWidth": "100%",
      "padding": "12px 16px",
      "stackMargin": "16px",
      "structureMargin": "8px",
      "textAlign": "left",
      "textLinkAsAction": {
        "fontFamily": "'Nunito', 'Helvetica Neue', Helvetica, Arial, sans-serif",
        "fontSize": "15px",
        "fontWeight": 400,
        "letterSpacing": undefined,
        "lineHeight": "24px",
        "textLinkBackgroundColorPrimarySelected": "inherit",
        "textLinkBorderRadiusFocus": "2px",
        "textLinkBorderWidthFocus": "2px",
        "textLinkColorPrimary": "#0376DA",
        "textLinkColorPrimaryActive": "#0376DA",
        "textLinkColorPrimaryDisabled": "#6FB1EA",
        "textLinkColorPrimaryHover": "#6FB1EA",
        "textLinkColorPrimarySelected": "inherit",
        "textLinkMargin": "0",
        "textLinkPadding": "0",
        "textLinkShadowColorFocus": "#0376DA",
      },
      "toastLarge": "800px",
      "toastMedium": "480px",
      "toastSmall": "368px",
      "zIndex": 5000,
    }
  }
/>
`;

exports[`<Toast /> renders a toast 1`] = `
<Toast
  forwardedRef={null}
  theme={
    {
      "animationEnterDuration": 300,
      "animationEnterTimingFunction": "easeIn",
      "animationExitDuration": 150,
      "animationExitTimingFunction": "easeOut",
      "animationFlipDuration": 150,
      "backgroundColor": "#5E6D7A",
      "backgroundColorError": "#F1AD33",
      "borderRadius": "3px",
      "boxShadow": "0 1px 5px 0 rgba(28,32,37,0.2)",
      "closeIconColor": undefined,
      "color": "#FFF",
      "colorAction": undefined,
      "colorDescription": undefined,
      "colorError": "#1C2025",
      "colorTitle": undefined,
      "fontFamily": "'Nunito', 'Helvetica Neue', Helvetica, Arial, sans-serif",
      "fontFamilyDescription": undefined,
      "fontFamilyTitle": undefined,
      "fontSize": "15px",
      "fontSizeDescription": undefined,
      "fontSizeTitle": undefined,
      "fontStretch": "normal",
      "fontStyle": "normal",
      "fontWeight": 600,
      "fontWeightDescription": undefined,
      "fontWeightTitle": undefined,
      "iconSize": 20,
      "isClassic": true,
      "letterSpacing": "normal",
      "letterSpacingDescription": undefined,
      "letterSpacingTitle": undefined,
      "lineHeight": "24px",
      "lineHeightDescription": undefined,
      "lineHeightTitle": undefined,
      "marginControl": "12px",
      "markingColorError": undefined,
      "markingColorInfo": undefined,
      "markingColorLoading": undefined,
      "markingColorSuccess": undefined,
      "markingColorWarning": undefined,
      "markingIconColorError": undefined,
      "markingIconColorInfo": undefined,
      "markingIconColorLoading": undefined,
      "markingIconColorSuccess": undefined,
      "markingIconColorWarning": undefined,
      "maxHeight": "120px",
      "maxWidth": "100%",
      "padding": "12px 16px",
      "stackMargin": "16px",
      "structureMargin": "8px",
      "textAlign": "left",
      "textLinkAsAction": {
        "fontFamily": "'Nunito', 'Helvetica Neue', Helvetica, Arial, sans-serif",
        "fontSize": "15px",
        "fontWeight": 400,
        "letterSpacing": undefined,
        "lineHeight": "24px",
        "textLinkBackgroundColorPrimarySelected": "inherit",
        "textLinkBorderRadiusFocus": "2px",
        "textLinkBorderWidthFocus": "2px",
        "textLinkColorPrimary": "#0376DA",
        "textLinkColorPrimaryActive": "#0376DA",
        "textLinkColorPrimaryDisabled": "#6FB1EA",
        "textLinkColorPrimaryHover": "#6FB1EA",
        "textLinkColorPrimarySelected": "inherit",
        "textLinkMargin": "0",
        "textLinkPadding": "0",
        "textLinkShadowColorFocus": "#0376DA",
      },
      "toastLarge": "800px",
      "toastMedium": "480px",
      "toastSmall": "368px",
      "zIndex": 5000,
    }
  }
/>
`;

exports[`<Toast /> renders a toast with content nodes 1`] = `
<Toast
  forwardedRef={null}
  theme={
    {
      "animationEnterDuration": 300,
      "animationEnterTimingFunction": "easeIn",
      "animationExitDuration": 150,
      "animationExitTimingFunction": "easeOut",
      "animationFlipDuration": 150,
      "backgroundColor": "#5E6D7A",
      "backgroundColorError": "#F1AD33",
      "borderRadius": "3px",
      "boxShadow": "0 1px 5px 0 rgba(28,32,37,0.2)",
      "closeIconColor": undefined,
      "color": "#FFF",
      "colorAction": undefined,
      "colorDescription": undefined,
      "colorError": "#1C2025",
      "colorTitle": undefined,
      "fontFamily": "'Nunito', 'Helvetica Neue', Helvetica, Arial, sans-serif",
      "fontFamilyDescription": undefined,
      "fontFamilyTitle": undefined,
      "fontSize": "15px",
      "fontSizeDescription": undefined,
      "fontSizeTitle": undefined,
      "fontStretch": "normal",
      "fontStyle": "normal",
      "fontWeight": 600,
      "fontWeightDescription": undefined,
      "fontWeightTitle": undefined,
      "iconSize": 20,
      "isClassic": true,
      "letterSpacing": "normal",
      "letterSpacingDescription": undefined,
      "letterSpacingTitle": undefined,
      "lineHeight": "24px",
      "lineHeightDescription": undefined,
      "lineHeightTitle": undefined,
      "marginControl": "12px",
      "markingColorError": undefined,
      "markingColorInfo": undefined,
      "markingColorLoading": undefined,
      "markingColorSuccess": undefined,
      "markingColorWarning": undefined,
      "markingIconColorError": undefined,
      "markingIconColorInfo": undefined,
      "markingIconColorLoading": undefined,
      "markingIconColorSuccess": undefined,
      "markingIconColorWarning": undefined,
      "maxHeight": "120px",
      "maxWidth": "100%",
      "padding": "12px 16px",
      "stackMargin": "16px",
      "structureMargin": "8px",
      "textAlign": "left",
      "textLinkAsAction": {
        "fontFamily": "'Nunito', 'Helvetica Neue', Helvetica, Arial, sans-serif",
        "fontSize": "15px",
        "fontWeight": 400,
        "letterSpacing": undefined,
        "lineHeight": "24px",
        "textLinkBackgroundColorPrimarySelected": "inherit",
        "textLinkBorderRadiusFocus": "2px",
        "textLinkBorderWidthFocus": "2px",
        "textLinkColorPrimary": "#0376DA",
        "textLinkColorPrimaryActive": "#0376DA",
        "textLinkColorPrimaryDisabled": "#6FB1EA",
        "textLinkColorPrimaryHover": "#6FB1EA",
        "textLinkColorPrimarySelected": "inherit",
        "textLinkMargin": "0",
        "textLinkPadding": "0",
        "textLinkShadowColorFocus": "#0376DA",
      },
      "toastLarge": "800px",
      "toastMedium": "480px",
      "toastSmall": "368px",
      "zIndex": 5000,
    }
  }
>
  <strong>
    Bold toast message
  </strong>
  <em>
    Emphasized toast message
  </em>
</Toast>
`;

exports[`<Toast /> toast with actions 1`] = `
<Toast
  actions={
    [
      {
        "callback": [Function],
        "id": 1,
        "title": "Link 1",
      },
      {
        "callback": [Function],
        "id": 2,
        "title": "Link 2",
      },
    ]
  }
  forwardedRef={null}
  theme={
    {
      "animationEnterDuration": 300,
      "animationEnterTimingFunction": "easeIn",
      "animationExitDuration": 150,
      "animationExitTimingFunction": "easeOut",
      "animationFlipDuration": 150,
      "backgroundColor": "#5E6D7A",
      "backgroundColorError": "#F1AD33",
      "borderRadius": "3px",
      "boxShadow": "0 1px 5px 0 rgba(28,32,37,0.2)",
      "closeIconColor": undefined,
      "color": "#FFF",
      "colorAction": undefined,
      "colorDescription": undefined,
      "colorError": "#1C2025",
      "colorTitle": undefined,
      "fontFamily": "'Nunito', 'Helvetica Neue', Helvetica, Arial, sans-serif",
      "fontFamilyDescription": undefined,
      "fontFamilyTitle": undefined,
      "fontSize": "15px",
      "fontSizeDescription": undefined,
      "fontSizeTitle": undefined,
      "fontStretch": "normal",
      "fontStyle": "normal",
      "fontWeight": 600,
      "fontWeightDescription": undefined,
      "fontWeightTitle": undefined,
      "iconSize": 20,
      "isClassic": true,
      "letterSpacing": "normal",
      "letterSpacingDescription": undefined,
      "letterSpacingTitle": undefined,
      "lineHeight": "24px",
      "lineHeightDescription": undefined,
      "lineHeightTitle": undefined,
      "marginControl": "12px",
      "markingColorError": undefined,
      "markingColorInfo": undefined,
      "markingColorLoading": undefined,
      "markingColorSuccess": undefined,
      "markingColorWarning": undefined,
      "markingIconColorError": undefined,
      "markingIconColorInfo": undefined,
      "markingIconColorLoading": undefined,
      "markingIconColorSuccess": undefined,
      "markingIconColorWarning": undefined,
      "maxHeight": "120px",
      "maxWidth": "100%",
      "padding": "12px 16px",
      "stackMargin": "16px",
      "structureMargin": "8px",
      "textAlign": "left",
      "textLinkAsAction": {
        "fontFamily": "'Nunito', 'Helvetica Neue', Helvetica, Arial, sans-serif",
        "fontSize": "15px",
        "fontWeight": 400,
        "letterSpacing": undefined,
        "lineHeight": "24px",
        "textLinkBackgroundColorPrimarySelected": "inherit",
        "textLinkBorderRadiusFocus": "2px",
        "textLinkBorderWidthFocus": "2px",
        "textLinkColorPrimary": "#0376DA",
        "textLinkColorPrimaryActive": "#0376DA",
        "textLinkColorPrimaryDisabled": "#6FB1EA",
        "textLinkColorPrimaryHover": "#6FB1EA",
        "textLinkColorPrimarySelected": "inherit",
        "textLinkMargin": "0",
        "textLinkPadding": "0",
        "textLinkShadowColorFocus": "#0376DA",
      },
      "toastLarge": "800px",
      "toastMedium": "480px",
      "toastSmall": "368px",
      "zIndex": 5000,
    }
  }
/>
`;

exports[`<Toast /> toast without close action 1`] = `
<Toast
  forwardedRef={null}
  hideCloseControl={true}
  theme={
    {
      "animationEnterDuration": 300,
      "animationEnterTimingFunction": "easeIn",
      "animationExitDuration": 150,
      "animationExitTimingFunction": "easeOut",
      "animationFlipDuration": 150,
      "backgroundColor": "#5E6D7A",
      "backgroundColorError": "#F1AD33",
      "borderRadius": "3px",
      "boxShadow": "0 1px 5px 0 rgba(28,32,37,0.2)",
      "closeIconColor": undefined,
      "color": "#FFF",
      "colorAction": undefined,
      "colorDescription": undefined,
      "colorError": "#1C2025",
      "colorTitle": undefined,
      "fontFamily": "'Nunito', 'Helvetica Neue', Helvetica, Arial, sans-serif",
      "fontFamilyDescription": undefined,
      "fontFamilyTitle": undefined,
      "fontSize": "15px",
      "fontSizeDescription": undefined,
      "fontSizeTitle": undefined,
      "fontStretch": "normal",
      "fontStyle": "normal",
      "fontWeight": 600,
      "fontWeightDescription": undefined,
      "fontWeightTitle": undefined,
      "iconSize": 20,
      "isClassic": true,
      "letterSpacing": "normal",
      "letterSpacingDescription": undefined,
      "letterSpacingTitle": undefined,
      "lineHeight": "24px",
      "lineHeightDescription": undefined,
      "lineHeightTitle": undefined,
      "marginControl": "12px",
      "markingColorError": undefined,
      "markingColorInfo": undefined,
      "markingColorLoading": undefined,
      "markingColorSuccess": undefined,
      "markingColorWarning": undefined,
      "markingIconColorError": undefined,
      "markingIconColorInfo": undefined,
      "markingIconColorLoading": undefined,
      "markingIconColorSuccess": undefined,
      "markingIconColorWarning": undefined,
      "maxHeight": "120px",
      "maxWidth": "100%",
      "padding": "12px 16px",
      "stackMargin": "16px",
      "structureMargin": "8px",
      "textAlign": "left",
      "textLinkAsAction": {
        "fontFamily": "'Nunito', 'Helvetica Neue', Helvetica, Arial, sans-serif",
        "fontSize": "15px",
        "fontWeight": 400,
        "letterSpacing": undefined,
        "lineHeight": "24px",
        "textLinkBackgroundColorPrimarySelected": "inherit",
        "textLinkBorderRadiusFocus": "2px",
        "textLinkBorderWidthFocus": "2px",
        "textLinkColorPrimary": "#0376DA",
        "textLinkColorPrimaryActive": "#0376DA",
        "textLinkColorPrimaryDisabled": "#6FB1EA",
        "textLinkColorPrimaryHover": "#6FB1EA",
        "textLinkColorPrimarySelected": "inherit",
        "textLinkMargin": "0",
        "textLinkPadding": "0",
        "textLinkShadowColorFocus": "#0376DA",
      },
      "toastLarge": "800px",
      "toastMedium": "480px",
      "toastSmall": "368px",
      "zIndex": 5000,
    }
  }
/>
`;
